# software-engineering

./: README.md
lab1/: README.md  workspace.dsl
lab2/: CMakeLists.txt  Dockerfile  Makefile  README.md  api-endpoints.md  docker-compose.yaml  request_examples.txt  test-progress.txt
lab2/.devcontainer/: Dockerfile  devcontainer.json
lab2/api/: openapi.yaml
lab2/api/definitions/: common.yaml  user.yaml  viewing.yaml
lab2/configs/: static_config.yaml
lab2/schemas/: property.yaml  registration.yaml  user.yaml
lab2/src/: greeting.cpp  greeting.hpp  greeting_benchmark.cpp  greeting_test.cpp  hello.cpp  hello.hpp  main.cpp
lab2/src/auth/: auth_checker.cpp  auth_checker.hpp  auth_checker_factory.hpp
lab2/src/components/: credentials_storage.cpp  credentials_storage.hpp  jwt_auth.cpp  property_storage.cpp  property_storage.hpp  user_storage.cpp  user_storage.hpp  viewing_storage.cpp  viewing_storage.hpp
lab2/src/handlers/: create_property_handler.cpp  create_property_handler.hpp  delete_viewing_handler.cpp  delete_viewing_handler.hpp  find_properties_handler.cpp  find_properties_handler.hpp  find_users_handler.cpp  find_users_handler.hpp  get_current_user_handler.cpp  get_current_user_handler.hpp  get_property_handler.cpp  get_property_handler.hpp  get_property_viewings_handler.cpp  get_property_viewings_handler.hpp  get_user_handler.cpp  get_user_handler.hpp  get_user_properties_handler.cpp  get_user_properties_handler.hpp  get_user_viewings_handler.cpp  get_user_viewings_handler.hpp  info_handler.cpp  info_handler.hpp  login_handler.cpp  login_handler.hpp  refresh_token_handler.cpp  refresh_token_handler.hpp  register_handler.cpp  register_handler.hpp  schedule_viewing_handler.cpp  schedule_viewing_handler.hpp  static_file_handler.cpp  static_file_handler.hpp  update_property_handler.cpp  update_property_handler.hpp
lab2/src/handlers/common/: schema_http_handler.hpp
lab2/static/: swagger.html
lab2/tests/: conftest.py  test_auth.py  test_basic.py  test_property.py  test_property_viewings.py  test_user.py  test_user_viewings.py  test_viewings.py  utils.py
lab3/: README.md  generate.py  pyproject.toml  run_query.py  schema.md
lab3/api_gateway/: CMakeLists.txt
lab3/api_gateway/.devcontainer/: Dockerfile  devcontainer.json
lab3/api_gateway/configs/: config_vars.testing.yaml  static_config.yaml
lab3/api_gateway/postgresql/queries/: create_credentials.sql  create_property.sql  delete_viewing.sql  find_users.sql  get_credentials_by_key.sql  get_user_by_id.sql  get_viewing_by_id.sql
lab3/api_gateway/postgresql/schemas/: schemas.sql  users.sql
lab3/api_gateway/src/: main.cpp
lab3/api_gateway/src/auth/: auth_checker.cpp  auth_checker.hpp  (+2 more)
lab3/api_gateway/tests/: conftest.py  test_property.py  test_property_viewings.py  test_user_viewings.py
lab3/docs/: optimization.md
lab3/utils/: data.sql  pyproject.toml
lab4/: README.md  queries.js  schema.js  validation.js
lab4/api_gateway/: CMakeLists.txt  README.md  docker-compose.yaml
lab4/api_gateway/.devcontainer/: Dockerfile
lab4/api_gateway/configs/: config_vars.testing.yaml  static_config.yaml
lab4/api_gateway/postgresql/queries/: create_address.sql  create_user.sql  create_viewing.sql  find_properties.sql  find_viewings.sql  get_property_by_id.sql  update_property.sql
lab4/api_gateway/src/: main.cpp
lab4/api_gateway/src/components/credentials_storage/: credentials_storage.cpp  credentials_storage.hpp
lab4/api_gateway/src/components/jwt_auth/: jwt_auth.cpp
lab4/api_gateway/src/components/property_storage/: property_storage.cpp  property_storage.hpp
lab4/api_gateway/src/components/user_storage/: user_storage.cpp  user_storage.hpp
lab4/api_gateway/src/components/viewing_storage/: viewing_storage.cpp  viewing_storage.hpp
lab4/api_gateway/src/handlers/: delete_viewing_handler.hpp  find_properties_handler.cpp  find_users_handler.cpp  get_current_user_handler.cpp  get_property_viewings_handler.cpp  get_user_properties_handler.cpp  get_user_viewings_handler.cpp
lab4/api_gateway/src/handlers/common/: utils.cpp
lab4/api_gateway/tests/: conftest.py  test_auth.py  utils.py
lab4/mongo/: Dockerfile
lab4/utils/: analyze_query.py
lab5/: README.md  performance_design.md
lab5/api_gateway/: CMakeLists.txt  docker-compose.yaml
lab5/api_gateway/.devcontainer/: devcontainer.json
lab5/api_gateway/configs/: static_config.yaml
lab5/api_gateway/mongo/: users.yaml  viewings.yaml
lab5/api_gateway/src/: main.cpp
lab5/api_gateway/tests/: test_basic.py
lab5/mongo/: schema_design.md
lab5/utils/: _client.py  _common.py  _logging.py  test_login_limit.py  test_properties.py  test_viewings.py
lab6/: README.md  event_driven_design.md
lab6/api_gateway/: .dockerignore  .gitignore  .python-env  Dockerfile.dev  docker-compose.dev.yaml
lab6/api_gateway/api/: openapi.yaml
lab6/api_gateway/configs/: config_vars.testing.yaml  static_config.yaml
lab6/api_gateway/src/: main.cpp
lab6/api_gateway/static/: swagger.html
lab6/document-indexer/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
lab6/document-indexer/document_indexer/: __main__.py  _app_builder.py  _config.py  _document_indexer.py  _document_schema.py  _event_publisher.py  _handlers.py
lab6/document-searcher/: .dockerignore  Dockerfile  README.md  pyproject.toml
lab6/document-searcher/config/: config.yml
lab6/document-searcher/document_searcher/: __main__.py  _app_builder.py  _config.py  _document_searcher.py  _event_handler.py  _handlers.py
lab6/integration-tests/: .gitignore  README.md  pyproject.toml
lab6/integration-tests/setup-env/: docker-compose.yml  variables.env
lab6/integration-tests/setup-env/property-indexer-config/: config.yml
lab6/integration-tests/setup-env/user-indexer-config/: config.yml
lab6/integration-tests/tests/: conftest.py  test_auth.py  test_property.py  test_property_viewings.py  test_user.py  test_user_viewings.py  test_viewings.py  utils.py
lab6/mongo/: data.js  schema.js
lab6/utils/: _client.py  _generator.py  pyproject.toml  test_properties.py
(+99 files in other folders)
