[project]
name = "integration-tests"
version = "0.0.1"
description = "Integration tests for Property Service"
readme = "README.md"
requires-python = "~=3.14.0"
dependencies = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "testcontainers==4.14.2",
    "zapros==0.11.1",
]

[dependency-groups]
dev = [
    "ruff==0.15.13",
]

[tool.pytest]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] [%(name)s] %(message)s"

[tool.ruff.lint]
select = ["I"]

[tool.ruff.lint.isort]
force-single-line = true
